improved path loader that can search a folder for JARs